# to_appimage

./: Cargo.toml  LICENSE  README.MD
.cargo/: config.toml
src/: appstream.rs  licensing.rs  main.rs
src/desktop_entry/: mod.rs
