[package]
name = "to_appimage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
dialog = "0.3.0"
image = "0.24.8"
itertools = "0.13.0"
path-utils = "0.1.0"
quick-xml = { version = "0.36.2", features = ["serialize"] }
regex = "1.10.3"
serde = {version="1.0.196", features=["derive"]}
serde_yaml = "0.9.31"
thiserror = "1.0.56"
which = "6.0.0"
